# even-keel

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  hacs.json
.claude/: launch.json
.github/workflows/: custom-card.yml  ha-config.yml  hacs-validate.yml  integration-tests.yml  simulator-tests.yml  wokwi.yml
custom-card/: README.md  hacs.json  info.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
custom-card/src/: boat-svg.ts  config.ts  (+2 more)
docs/: ui-dev-quickstart.md
firmware/: README.md  boat-mon-wokwi.yaml  boat-mon.yaml  secrets.yaml.example
hil-rig/: README.md  bom.md
home-assistant/: README.md  configuration.yaml  secrets.yaml.example
planning/: README.md  architecture.md  custom-card-research.md  evaluation-criteria-and-dashboard-simulation.md  hardware-deep-dive.md  infrastructure.md  local-dashboard.md  nmea2000-integration.md  open-questions.md  roadmap.md  sensor-expansion.md  simplicity-review.md  tdd-architecture.md
relay/: README.md
research/: sailboat-monitor-continuation-brief.md  sailboat-monitor-design.md
simulator/: Dockerfile  README.md  pyproject.toml
simulator/src/evenkeel_sim/: __init__.py  __main__.py  discovery.py  generators.py  publisher.py  scenarios.py  sensors.py
simulator/tests/: conftest.py  test_discovery.py  test_generators.py  test_scenarios.py  test_sensors.py
tests/: README.md  conftest.py  pyproject.toml  pytest.ini  requirements.txt  test_ais_targets.py  test_anchor_alarm.py  test_anchor_watch.py  test_battery_alarm.py  test_battery_telemetry.py  test_bilge_alarm_minimal.py  test_bilge_publication.py  test_card_e2e.py  test_engine_telemetry.py  test_leak_alarms.py  test_shore_alarm.py  test_simulator_integration.py
tools/: preview-redirector.py
(+47 files in other folders)
